// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should handle escaped solidus 1`] = `
Array [
  Object {
    "end": 1,
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "raw": "a",
    "start": 0,
    "type": "Literal",
  },
  Object {
    "end": 3,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 1,
      },
      "start": Object {
        "column": 2,
        "line": 1,
      },
    },
    "raw": "=",
    "start": 2,
    "type": "Equal",
  },
  Object {
    "end": 8,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 1,
      },
      "start": Object {
        "column": 4,
        "line": 1,
      },
    },
    "raw": "\\"\\\\\\\\\\"",
    "start": 4,
    "type": "Literal",
  },
]
`;

exports[`should tokenize complex input 1`] = `
Array [
  Object {
    "end": 32,
    "loc": Object {
      "end": Object {
        "column": 32,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "raw": "# This is a TOML document. Boom.",
    "start": 0,
    "type": "Comment",
  },
  Object {
    "end": 39,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "raw": "title",
    "start": 34,
    "type": "Literal",
  },
  Object {
    "end": 41,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 3,
      },
      "start": Object {
        "column": 6,
        "line": 3,
      },
    },
    "raw": "=",
    "start": 40,
    "type": "Equal",
  },
  Object {
    "end": 56,
    "loc": Object {
      "end": Object {
        "column": 22,
        "line": 3,
      },
      "start": Object {
        "column": 8,
        "line": 3,
      },
    },
    "raw": "\\"TOML Example\\"",
    "start": 42,
    "type": "Literal",
  },
  Object {
    "end": 59,
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 5,
      },
      "start": Object {
        "column": 0,
        "line": 5,
      },
    },
    "raw": "[",
    "start": 58,
    "type": "Bracket",
  },
  Object {
    "end": 64,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 5,
      },
      "start": Object {
        "column": 1,
        "line": 5,
      },
    },
    "raw": "owner",
    "start": 59,
    "type": "Literal",
  },
  Object {
    "end": 65,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 5,
      },
      "start": Object {
        "column": 6,
        "line": 5,
      },
    },
    "raw": "]",
    "start": 64,
    "type": "Bracket",
  },
  Object {
    "end": 70,
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 6,
      },
      "start": Object {
        "column": 0,
        "line": 6,
      },
    },
    "raw": "name",
    "start": 66,
    "type": "Literal",
  },
  Object {
    "end": 72,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 6,
      },
      "start": Object {
        "column": 5,
        "line": 6,
      },
    },
    "raw": "=",
    "start": 71,
    "type": "Equal",
  },
  Object {
    "end": 93,
    "loc": Object {
      "end": Object {
        "column": 27,
        "line": 6,
      },
      "start": Object {
        "column": 7,
        "line": 6,
      },
    },
    "raw": "\\"Tom Preston-Werner\\"",
    "start": 73,
    "type": "Literal",
  },
  Object {
    "end": 106,
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 7,
      },
      "start": Object {
        "column": 0,
        "line": 7,
      },
    },
    "raw": "organization",
    "start": 94,
    "type": "Literal",
  },
  Object {
    "end": 108,
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 7,
      },
      "start": Object {
        "column": 13,
        "line": 7,
      },
    },
    "raw": "=",
    "start": 107,
    "type": "Equal",
  },
  Object {
    "end": 117,
    "loc": Object {
      "end": Object {
        "column": 23,
        "line": 7,
      },
      "start": Object {
        "column": 15,
        "line": 7,
      },
    },
    "raw": "\\"GitHub\\"",
    "start": 109,
    "type": "Literal",
  },
  Object {
    "end": 121,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 8,
      },
      "start": Object {
        "column": 0,
        "line": 8,
      },
    },
    "raw": "bio",
    "start": 118,
    "type": "Literal",
  },
  Object {
    "end": 123,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 8,
      },
      "start": Object {
        "column": 4,
        "line": 8,
      },
    },
    "raw": "=",
    "start": 122,
    "type": "Equal",
  },
  Object {
    "end": 176,
    "loc": Object {
      "end": Object {
        "column": 58,
        "line": 8,
      },
      "start": Object {
        "column": 6,
        "line": 8,
      },
    },
    "raw": "\\"GitHub Cofounder & CEO\\\\nLikes tater tots and beer.\\"",
    "start": 124,
    "type": "Literal",
  },
  Object {
    "end": 180,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 9,
      },
      "start": Object {
        "column": 0,
        "line": 9,
      },
    },
    "raw": "dob",
    "start": 177,
    "type": "Literal",
  },
  Object {
    "end": 182,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 9,
      },
      "start": Object {
        "column": 4,
        "line": 9,
      },
    },
    "raw": "=",
    "start": 181,
    "type": "Equal",
  },
  Object {
    "end": 203,
    "loc": Object {
      "end": Object {
        "column": 26,
        "line": 9,
      },
      "start": Object {
        "column": 6,
        "line": 9,
      },
    },
    "raw": "1979-05-27T07:32:00Z",
    "start": 183,
    "type": "Literal",
  },
  Object {
    "end": 233,
    "loc": Object {
      "end": Object {
        "column": 56,
        "line": 9,
      },
      "start": Object {
        "column": 27,
        "line": 9,
      },
    },
    "raw": "# First class dates? Why not?",
    "start": 204,
    "type": "Comment",
  },
  Object {
    "end": 236,
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 11,
      },
      "start": Object {
        "column": 0,
        "line": 11,
      },
    },
    "raw": "[",
    "start": 235,
    "type": "Bracket",
  },
  Object {
    "end": 244,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 11,
      },
      "start": Object {
        "column": 1,
        "line": 11,
      },
    },
    "raw": "database",
    "start": 236,
    "type": "Literal",
  },
  Object {
    "end": 245,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 11,
      },
      "start": Object {
        "column": 9,
        "line": 11,
      },
    },
    "raw": "]",
    "start": 244,
    "type": "Bracket",
  },
  Object {
    "end": 252,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 12,
      },
      "start": Object {
        "column": 0,
        "line": 12,
      },
    },
    "raw": "server",
    "start": 246,
    "type": "Literal",
  },
  Object {
    "end": 254,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 12,
      },
      "start": Object {
        "column": 7,
        "line": 12,
      },
    },
    "raw": "=",
    "start": 253,
    "type": "Equal",
  },
  Object {
    "end": 268,
    "loc": Object {
      "end": Object {
        "column": 22,
        "line": 12,
      },
      "start": Object {
        "column": 9,
        "line": 12,
      },
    },
    "raw": "\\"192.168.1.1\\"",
    "start": 255,
    "type": "Literal",
  },
  Object {
    "end": 274,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 13,
      },
      "start": Object {
        "column": 0,
        "line": 13,
      },
    },
    "raw": "ports",
    "start": 269,
    "type": "Literal",
  },
  Object {
    "end": 276,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 13,
      },
      "start": Object {
        "column": 6,
        "line": 13,
      },
    },
    "raw": "=",
    "start": 275,
    "type": "Equal",
  },
  Object {
    "end": 278,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 13,
      },
      "start": Object {
        "column": 8,
        "line": 13,
      },
    },
    "raw": "[",
    "start": 277,
    "type": "Bracket",
  },
  Object {
    "end": 283,
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 13,
      },
      "start": Object {
        "column": 10,
        "line": 13,
      },
    },
    "raw": "8001",
    "start": 279,
    "type": "Literal",
  },
  Object {
    "end": 284,
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 13,
      },
      "start": Object {
        "column": 14,
        "line": 13,
      },
    },
    "raw": ",",
    "start": 283,
    "type": "Comma",
  },
  Object {
    "end": 289,
    "loc": Object {
      "end": Object {
        "column": 20,
        "line": 13,
      },
      "start": Object {
        "column": 16,
        "line": 13,
      },
    },
    "raw": "8001",
    "start": 285,
    "type": "Literal",
  },
  Object {
    "end": 290,
    "loc": Object {
      "end": Object {
        "column": 21,
        "line": 13,
      },
      "start": Object {
        "column": 20,
        "line": 13,
      },
    },
    "raw": ",",
    "start": 289,
    "type": "Comma",
  },
  Object {
    "end": 295,
    "loc": Object {
      "end": Object {
        "column": 26,
        "line": 13,
      },
      "start": Object {
        "column": 22,
        "line": 13,
      },
    },
    "raw": "8002",
    "start": 291,
    "type": "Literal",
  },
  Object {
    "end": 297,
    "loc": Object {
      "end": Object {
        "column": 28,
        "line": 13,
      },
      "start": Object {
        "column": 27,
        "line": 13,
      },
    },
    "raw": "]",
    "start": 296,
    "type": "Bracket",
  },
  Object {
    "end": 312,
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 14,
      },
      "start": Object {
        "column": 0,
        "line": 14,
      },
    },
    "raw": "connection_max",
    "start": 298,
    "type": "Literal",
  },
  Object {
    "end": 314,
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 14,
      },
      "start": Object {
        "column": 15,
        "line": 14,
      },
    },
    "raw": "=",
    "start": 313,
    "type": "Equal",
  },
  Object {
    "end": 319,
    "loc": Object {
      "end": Object {
        "column": 21,
        "line": 14,
      },
      "start": Object {
        "column": 17,
        "line": 14,
      },
    },
    "raw": "5000",
    "start": 315,
    "type": "Literal",
  },
  Object {
    "end": 327,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 15,
      },
      "start": Object {
        "column": 0,
        "line": 15,
      },
    },
    "raw": "enabled",
    "start": 320,
    "type": "Literal",
  },
  Object {
    "end": 329,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 15,
      },
      "start": Object {
        "column": 8,
        "line": 15,
      },
    },
    "raw": "=",
    "start": 328,
    "type": "Equal",
  },
  Object {
    "end": 334,
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 15,
      },
      "start": Object {
        "column": 10,
        "line": 15,
      },
    },
    "raw": "true",
    "start": 330,
    "type": "Literal",
  },
  Object {
    "end": 337,
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 17,
      },
      "start": Object {
        "column": 0,
        "line": 17,
      },
    },
    "raw": "[",
    "start": 336,
    "type": "Bracket",
  },
  Object {
    "end": 344,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 17,
      },
      "start": Object {
        "column": 1,
        "line": 17,
      },
    },
    "raw": "servers",
    "start": 337,
    "type": "Literal",
  },
  Object {
    "end": 345,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 17,
      },
      "start": Object {
        "column": 8,
        "line": 17,
      },
    },
    "raw": "]",
    "start": 344,
    "type": "Bracket",
  },
  Object {
    "end": 413,
    "loc": Object {
      "end": Object {
        "column": 66,
        "line": 19,
      },
      "start": Object {
        "column": 2,
        "line": 19,
      },
    },
    "raw": "# You can indent as you please. Tabs or spaces. TOML don't care.",
    "start": 349,
    "type": "Comment",
  },
  Object {
    "end": 417,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 20,
      },
      "start": Object {
        "column": 2,
        "line": 20,
      },
    },
    "raw": "[",
    "start": 416,
    "type": "Bracket",
  },
  Object {
    "end": 424,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 20,
      },
      "start": Object {
        "column": 3,
        "line": 20,
      },
    },
    "raw": "servers",
    "start": 417,
    "type": "Literal",
  },
  Object {
    "end": 425,
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 20,
      },
      "start": Object {
        "column": 10,
        "line": 20,
      },
    },
    "raw": ".",
    "start": 424,
    "type": "Dot",
  },
  Object {
    "end": 430,
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 20,
      },
      "start": Object {
        "column": 11,
        "line": 20,
      },
    },
    "raw": "alpha",
    "start": 425,
    "type": "Literal",
  },
  Object {
    "end": 431,
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 20,
      },
      "start": Object {
        "column": 16,
        "line": 20,
      },
    },
    "raw": "]",
    "start": 430,
    "type": "Bracket",
  },
  Object {
    "end": 436,
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 21,
      },
      "start": Object {
        "column": 2,
        "line": 21,
      },
    },
    "raw": "ip",
    "start": 434,
    "type": "Literal",
  },
  Object {
    "end": 438,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 21,
      },
      "start": Object {
        "column": 5,
        "line": 21,
      },
    },
    "raw": "=",
    "start": 437,
    "type": "Equal",
  },
  Object {
    "end": 449,
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 21,
      },
      "start": Object {
        "column": 7,
        "line": 21,
      },
    },
    "raw": "\\"10.0.0.1\\"",
    "start": 439,
    "type": "Literal",
  },
  Object {
    "end": 454,
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 22,
      },
      "start": Object {
        "column": 2,
        "line": 22,
      },
    },
    "raw": "dc",
    "start": 452,
    "type": "Literal",
  },
  Object {
    "end": 456,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 22,
      },
      "start": Object {
        "column": 5,
        "line": 22,
      },
    },
    "raw": "=",
    "start": 455,
    "type": "Equal",
  },
  Object {
    "end": 465,
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 22,
      },
      "start": Object {
        "column": 7,
        "line": 22,
      },
    },
    "raw": "\\"eqdc10\\"",
    "start": 457,
    "type": "Literal",
  },
  Object {
    "end": 470,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 24,
      },
      "start": Object {
        "column": 2,
        "line": 24,
      },
    },
    "raw": "[",
    "start": 469,
    "type": "Bracket",
  },
  Object {
    "end": 477,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 24,
      },
      "start": Object {
        "column": 3,
        "line": 24,
      },
    },
    "raw": "servers",
    "start": 470,
    "type": "Literal",
  },
  Object {
    "end": 478,
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 24,
      },
      "start": Object {
        "column": 10,
        "line": 24,
      },
    },
    "raw": ".",
    "start": 477,
    "type": "Dot",
  },
  Object {
    "end": 482,
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 24,
      },
      "start": Object {
        "column": 11,
        "line": 24,
      },
    },
    "raw": "beta",
    "start": 478,
    "type": "Literal",
  },
  Object {
    "end": 483,
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 24,
      },
      "start": Object {
        "column": 15,
        "line": 24,
      },
    },
    "raw": "]",
    "start": 482,
    "type": "Bracket",
  },
  Object {
    "end": 488,
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 25,
      },
      "start": Object {
        "column": 2,
        "line": 25,
      },
    },
    "raw": "ip",
    "start": 486,
    "type": "Literal",
  },
  Object {
    "end": 490,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 25,
      },
      "start": Object {
        "column": 5,
        "line": 25,
      },
    },
    "raw": "=",
    "start": 489,
    "type": "Equal",
  },
  Object {
    "end": 501,
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 25,
      },
      "start": Object {
        "column": 7,
        "line": 25,
      },
    },
    "raw": "\\"10.0.0.2\\"",
    "start": 491,
    "type": "Literal",
  },
  Object {
    "end": 506,
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 26,
      },
      "start": Object {
        "column": 2,
        "line": 26,
      },
    },
    "raw": "dc",
    "start": 504,
    "type": "Literal",
  },
  Object {
    "end": 508,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 26,
      },
      "start": Object {
        "column": 5,
        "line": 26,
      },
    },
    "raw": "=",
    "start": 507,
    "type": "Equal",
  },
  Object {
    "end": 517,
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 26,
      },
      "start": Object {
        "column": 7,
        "line": 26,
      },
    },
    "raw": "\\"eqdc10\\"",
    "start": 509,
    "type": "Literal",
  },
  Object {
    "end": 527,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 27,
      },
      "start": Object {
        "column": 2,
        "line": 27,
      },
    },
    "raw": "country",
    "start": 520,
    "type": "Literal",
  },
  Object {
    "end": 529,
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 27,
      },
      "start": Object {
        "column": 10,
        "line": 27,
      },
    },
    "raw": "=",
    "start": 528,
    "type": "Equal",
  },
  Object {
    "end": 534,
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 27,
      },
      "start": Object {
        "column": 12,
        "line": 27,
      },
    },
    "raw": "\\"中国\\"",
    "start": 530,
    "type": "Literal",
  },
  Object {
    "end": 567,
    "loc": Object {
      "end": Object {
        "column": 49,
        "line": 27,
      },
      "start": Object {
        "column": 17,
        "line": 27,
      },
    },
    "raw": "# This should be parsed as UTF-8",
    "start": 535,
    "type": "Comment",
  },
  Object {
    "end": 570,
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 29,
      },
      "start": Object {
        "column": 0,
        "line": 29,
      },
    },
    "raw": "[",
    "start": 569,
    "type": "Bracket",
  },
  Object {
    "end": 577,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 29,
      },
      "start": Object {
        "column": 1,
        "line": 29,
      },
    },
    "raw": "clients",
    "start": 570,
    "type": "Literal",
  },
  Object {
    "end": 578,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 29,
      },
      "start": Object {
        "column": 8,
        "line": 29,
      },
    },
    "raw": "]",
    "start": 577,
    "type": "Bracket",
  },
  Object {
    "end": 583,
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 30,
      },
      "start": Object {
        "column": 0,
        "line": 30,
      },
    },
    "raw": "data",
    "start": 579,
    "type": "Literal",
  },
  Object {
    "end": 585,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 30,
      },
      "start": Object {
        "column": 5,
        "line": 30,
      },
    },
    "raw": "=",
    "start": 584,
    "type": "Equal",
  },
  Object {
    "end": 587,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 30,
      },
      "start": Object {
        "column": 7,
        "line": 30,
      },
    },
    "raw": "[",
    "start": 586,
    "type": "Bracket",
  },
  Object {
    "end": 589,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 30,
      },
      "start": Object {
        "column": 9,
        "line": 30,
      },
    },
    "raw": "[",
    "start": 588,
    "type": "Bracket",
  },
  Object {
    "end": 596,
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 30,
      },
      "start": Object {
        "column": 10,
        "line": 30,
      },
    },
    "raw": "\\"gamma\\"",
    "start": 589,
    "type": "Literal",
  },
  Object {
    "end": 597,
    "loc": Object {
      "end": Object {
        "column": 18,
        "line": 30,
      },
      "start": Object {
        "column": 17,
        "line": 30,
      },
    },
    "raw": ",",
    "start": 596,
    "type": "Comma",
  },
  Object {
    "end": 605,
    "loc": Object {
      "end": Object {
        "column": 26,
        "line": 30,
      },
      "start": Object {
        "column": 19,
        "line": 30,
      },
    },
    "raw": "\\"delta\\"",
    "start": 598,
    "type": "Literal",
  },
  Object {
    "end": 606,
    "loc": Object {
      "end": Object {
        "column": 27,
        "line": 30,
      },
      "start": Object {
        "column": 26,
        "line": 30,
      },
    },
    "raw": "]",
    "start": 605,
    "type": "Bracket",
  },
  Object {
    "end": 607,
    "loc": Object {
      "end": Object {
        "column": 28,
        "line": 30,
      },
      "start": Object {
        "column": 27,
        "line": 30,
      },
    },
    "raw": ",",
    "start": 606,
    "type": "Comma",
  },
  Object {
    "end": 609,
    "loc": Object {
      "end": Object {
        "column": 30,
        "line": 30,
      },
      "start": Object {
        "column": 29,
        "line": 30,
      },
    },
    "raw": "[",
    "start": 608,
    "type": "Bracket",
  },
  Object {
    "end": 610,
    "loc": Object {
      "end": Object {
        "column": 31,
        "line": 30,
      },
      "start": Object {
        "column": 30,
        "line": 30,
      },
    },
    "raw": "1",
    "start": 609,
    "type": "Literal",
  },
  Object {
    "end": 611,
    "loc": Object {
      "end": Object {
        "column": 32,
        "line": 30,
      },
      "start": Object {
        "column": 31,
        "line": 30,
      },
    },
    "raw": ",",
    "start": 610,
    "type": "Comma",
  },
  Object {
    "end": 613,
    "loc": Object {
      "end": Object {
        "column": 34,
        "line": 30,
      },
      "start": Object {
        "column": 33,
        "line": 30,
      },
    },
    "raw": "2",
    "start": 612,
    "type": "Literal",
  },
  Object {
    "end": 614,
    "loc": Object {
      "end": Object {
        "column": 35,
        "line": 30,
      },
      "start": Object {
        "column": 34,
        "line": 30,
      },
    },
    "raw": "]",
    "start": 613,
    "type": "Bracket",
  },
  Object {
    "end": 616,
    "loc": Object {
      "end": Object {
        "column": 37,
        "line": 30,
      },
      "start": Object {
        "column": 36,
        "line": 30,
      },
    },
    "raw": "]",
    "start": 615,
    "type": "Bracket",
  },
  Object {
    "end": 665,
    "loc": Object {
      "end": Object {
        "column": 86,
        "line": 30,
      },
      "start": Object {
        "column": 38,
        "line": 30,
      },
    },
    "raw": "# just an update to make sure parsers support it",
    "start": 617,
    "type": "Comment",
  },
  Object {
    "end": 706,
    "loc": Object {
      "end": Object {
        "column": 39,
        "line": 32,
      },
      "start": Object {
        "column": 0,
        "line": 32,
      },
    },
    "raw": "# Line breaks are OK when inside arrays",
    "start": 667,
    "type": "Comment",
  },
  Object {
    "end": 712,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 33,
      },
      "start": Object {
        "column": 0,
        "line": 33,
      },
    },
    "raw": "hosts",
    "start": 707,
    "type": "Literal",
  },
  Object {
    "end": 714,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 33,
      },
      "start": Object {
        "column": 6,
        "line": 33,
      },
    },
    "raw": "=",
    "start": 713,
    "type": "Equal",
  },
  Object {
    "end": 716,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 33,
      },
      "start": Object {
        "column": 8,
        "line": 33,
      },
    },
    "raw": "[",
    "start": 715,
    "type": "Bracket",
  },
  Object {
    "end": 726,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 34,
      },
      "start": Object {
        "column": 2,
        "line": 34,
      },
    },
    "raw": "\\"alpha\\"",
    "start": 719,
    "type": "Literal",
  },
  Object {
    "end": 727,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 34,
      },
      "start": Object {
        "column": 9,
        "line": 34,
      },
    },
    "raw": ",",
    "start": 726,
    "type": "Comma",
  },
  Object {
    "end": 737,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 35,
      },
      "start": Object {
        "column": 2,
        "line": 35,
      },
    },
    "raw": "\\"omega\\"",
    "start": 730,
    "type": "Literal",
  },
  Object {
    "end": 739,
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 36,
      },
      "start": Object {
        "column": 0,
        "line": 36,
      },
    },
    "raw": "]",
    "start": 738,
    "type": "Bracket",
  },
  Object {
    "end": 746,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 38,
      },
      "start": Object {
        "column": 0,
        "line": 38,
      },
    },
    "raw": "count",
    "start": 741,
    "type": "Literal",
  },
  Object {
    "end": 748,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 38,
      },
      "start": Object {
        "column": 6,
        "line": 38,
      },
    },
    "raw": "=",
    "start": 747,
    "type": "Equal",
  },
  Object {
    "end": 750,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 38,
      },
      "start": Object {
        "column": 8,
        "line": 38,
      },
    },
    "raw": "{",
    "start": 749,
    "type": "Curly",
  },
  Object {
    "end": 752,
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 38,
      },
      "start": Object {
        "column": 10,
        "line": 38,
      },
    },
    "raw": "a",
    "start": 751,
    "type": "Literal",
  },
  Object {
    "end": 754,
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 38,
      },
      "start": Object {
        "column": 12,
        "line": 38,
      },
    },
    "raw": "=",
    "start": 753,
    "type": "Equal",
  },
  Object {
    "end": 756,
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 38,
      },
      "start": Object {
        "column": 14,
        "line": 38,
      },
    },
    "raw": "1",
    "start": 755,
    "type": "Literal",
  },
  Object {
    "end": 757,
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 38,
      },
      "start": Object {
        "column": 15,
        "line": 38,
      },
    },
    "raw": ",",
    "start": 756,
    "type": "Comma",
  },
  Object {
    "end": 759,
    "loc": Object {
      "end": Object {
        "column": 18,
        "line": 38,
      },
      "start": Object {
        "column": 17,
        "line": 38,
      },
    },
    "raw": "b",
    "start": 758,
    "type": "Literal",
  },
  Object {
    "end": 760,
    "loc": Object {
      "end": Object {
        "column": 19,
        "line": 38,
      },
      "start": Object {
        "column": 18,
        "line": 38,
      },
    },
    "raw": "=",
    "start": 759,
    "type": "Equal",
  },
  Object {
    "end": 761,
    "loc": Object {
      "end": Object {
        "column": 20,
        "line": 38,
      },
      "start": Object {
        "column": 19,
        "line": 38,
      },
    },
    "raw": "2",
    "start": 760,
    "type": "Literal",
  },
  Object {
    "end": 765,
    "loc": Object {
      "end": Object {
        "column": 24,
        "line": 38,
      },
      "start": Object {
        "column": 23,
        "line": 38,
      },
    },
    "raw": ",",
    "start": 764,
    "type": "Comma",
  },
  Object {
    "end": 767,
    "loc": Object {
      "end": Object {
        "column": 26,
        "line": 38,
      },
      "start": Object {
        "column": 25,
        "line": 38,
      },
    },
    "raw": "c",
    "start": 766,
    "type": "Literal",
  },
  Object {
    "end": 769,
    "loc": Object {
      "end": Object {
        "column": 28,
        "line": 38,
      },
      "start": Object {
        "column": 27,
        "line": 38,
      },
    },
    "raw": "=",
    "start": 768,
    "type": "Equal",
  },
  Object {
    "end": 771,
    "loc": Object {
      "end": Object {
        "column": 30,
        "line": 38,
      },
      "start": Object {
        "column": 29,
        "line": 38,
      },
    },
    "raw": "3",
    "start": 770,
    "type": "Literal",
  },
  Object {
    "end": 773,
    "loc": Object {
      "end": Object {
        "column": 32,
        "line": 38,
      },
      "start": Object {
        "column": 31,
        "line": 38,
      },
    },
    "raw": "}",
    "start": 772,
    "type": "Curly",
  },
  Object {
    "end": 785,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 40,
      },
      "start": Object {
        "column": 0,
        "line": 40,
      },
    },
    "raw": "# Products",
    "start": 775,
    "type": "Comment",
  },
  Object {
    "end": 790,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 42,
      },
      "start": Object {
        "column": 2,
        "line": 42,
      },
    },
    "raw": "[",
    "start": 789,
    "type": "Bracket",
  },
  Object {
    "end": 791,
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 42,
      },
      "start": Object {
        "column": 3,
        "line": 42,
      },
    },
    "raw": "[",
    "start": 790,
    "type": "Bracket",
  },
  Object {
    "end": 799,
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 42,
      },
      "start": Object {
        "column": 4,
        "line": 42,
      },
    },
    "raw": "products",
    "start": 791,
    "type": "Literal",
  },
  Object {
    "end": 800,
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 42,
      },
      "start": Object {
        "column": 12,
        "line": 42,
      },
    },
    "raw": "]",
    "start": 799,
    "type": "Bracket",
  },
  Object {
    "end": 801,
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 42,
      },
      "start": Object {
        "column": 13,
        "line": 42,
      },
    },
    "raw": "]",
    "start": 800,
    "type": "Bracket",
  },
  Object {
    "end": 808,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 43,
      },
      "start": Object {
        "column": 2,
        "line": 43,
      },
    },
    "raw": "name",
    "start": 804,
    "type": "Literal",
  },
  Object {
    "end": 810,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 43,
      },
      "start": Object {
        "column": 7,
        "line": 43,
      },
    },
    "raw": "=",
    "start": 809,
    "type": "Equal",
  },
  Object {
    "end": 819,
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 43,
      },
      "start": Object {
        "column": 9,
        "line": 43,
      },
    },
    "raw": "\\"Hammer\\"",
    "start": 811,
    "type": "Literal",
  },
  Object {
    "end": 825,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 44,
      },
      "start": Object {
        "column": 2,
        "line": 44,
      },
    },
    "raw": "sku",
    "start": 822,
    "type": "Literal",
  },
  Object {
    "end": 827,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 44,
      },
      "start": Object {
        "column": 6,
        "line": 44,
      },
    },
    "raw": "=",
    "start": 826,
    "type": "Equal",
  },
  Object {
    "end": 837,
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 44,
      },
      "start": Object {
        "column": 8,
        "line": 44,
      },
    },
    "raw": "738594937",
    "start": 828,
    "type": "Literal",
  },
  Object {
    "end": 842,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 46,
      },
      "start": Object {
        "column": 2,
        "line": 46,
      },
    },
    "raw": "[",
    "start": 841,
    "type": "Bracket",
  },
  Object {
    "end": 843,
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 46,
      },
      "start": Object {
        "column": 3,
        "line": 46,
      },
    },
    "raw": "[",
    "start": 842,
    "type": "Bracket",
  },
  Object {
    "end": 851,
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 46,
      },
      "start": Object {
        "column": 4,
        "line": 46,
      },
    },
    "raw": "products",
    "start": 843,
    "type": "Literal",
  },
  Object {
    "end": 852,
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 46,
      },
      "start": Object {
        "column": 12,
        "line": 46,
      },
    },
    "raw": "]",
    "start": 851,
    "type": "Bracket",
  },
  Object {
    "end": 853,
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 46,
      },
      "start": Object {
        "column": 13,
        "line": 46,
      },
    },
    "raw": "]",
    "start": 852,
    "type": "Bracket",
  },
  Object {
    "end": 860,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 47,
      },
      "start": Object {
        "column": 2,
        "line": 47,
      },
    },
    "raw": "name",
    "start": 856,
    "type": "Literal",
  },
  Object {
    "end": 862,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 47,
      },
      "start": Object {
        "column": 7,
        "line": 47,
      },
    },
    "raw": "=",
    "start": 861,
    "type": "Equal",
  },
  Object {
    "end": 869,
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 47,
      },
      "start": Object {
        "column": 9,
        "line": 47,
      },
    },
    "raw": "\\"Nail\\"",
    "start": 863,
    "type": "Literal",
  },
  Object {
    "end": 875,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 48,
      },
      "start": Object {
        "column": 2,
        "line": 48,
      },
    },
    "raw": "sku",
    "start": 872,
    "type": "Literal",
  },
  Object {
    "end": 877,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 48,
      },
      "start": Object {
        "column": 6,
        "line": 48,
      },
    },
    "raw": "=",
    "start": 876,
    "type": "Equal",
  },
  Object {
    "end": 887,
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 48,
      },
      "start": Object {
        "column": 8,
        "line": 48,
      },
    },
    "raw": "284758393",
    "start": 878,
    "type": "Literal",
  },
  Object {
    "end": 895,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 49,
      },
      "start": Object {
        "column": 2,
        "line": 49,
      },
    },
    "raw": "color",
    "start": 890,
    "type": "Literal",
  },
  Object {
    "end": 897,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 49,
      },
      "start": Object {
        "column": 8,
        "line": 49,
      },
    },
    "raw": "=",
    "start": 896,
    "type": "Equal",
  },
  Object {
    "end": 904,
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 49,
      },
      "start": Object {
        "column": 10,
        "line": 49,
      },
    },
    "raw": "\\"gray\\"",
    "start": 898,
    "type": "Literal",
  },
]
`;

exports[`should tokenize dotted key with spaces 1`] = `
Array [
  Object {
    "end": 1,
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "raw": "[",
    "start": 0,
    "type": "Bracket",
  },
  Object {
    "end": 2,
    "loc": Object {
      "end": Object {
        "column": 2,
        "line": 1,
      },
      "start": Object {
        "column": 1,
        "line": 1,
      },
    },
    "raw": "[",
    "start": 1,
    "type": "Bracket",
  },
  Object {
    "end": 4,
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 1,
      },
      "start": Object {
        "column": 3,
        "line": 1,
      },
    },
    "raw": "a",
    "start": 3,
    "type": "Literal",
  },
  Object {
    "end": 6,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 1,
      },
      "start": Object {
        "column": 5,
        "line": 1,
      },
    },
    "raw": ".",
    "start": 5,
    "type": "Dot",
  },
  Object {
    "end": 10,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 1,
      },
      "start": Object {
        "column": 7,
        "line": 1,
      },
    },
    "raw": "\\"b\\"",
    "start": 7,
    "type": "Literal",
  },
  Object {
    "end": 12,
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 1,
      },
      "start": Object {
        "column": 11,
        "line": 1,
      },
    },
    "raw": ".",
    "start": 11,
    "type": "Dot",
  },
  Object {
    "end": 16,
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 1,
      },
      "start": Object {
        "column": 13,
        "line": 1,
      },
    },
    "raw": "'c'",
    "start": 13,
    "type": "Literal",
  },
  Object {
    "end": 18,
    "loc": Object {
      "end": Object {
        "column": 18,
        "line": 1,
      },
      "start": Object {
        "column": 17,
        "line": 1,
      },
    },
    "raw": "]",
    "start": 17,
    "type": "Bracket",
  },
  Object {
    "end": 19,
    "loc": Object {
      "end": Object {
        "column": 19,
        "line": 1,
      },
      "start": Object {
        "column": 18,
        "line": 1,
      },
    },
    "raw": "]",
    "start": 18,
    "type": "Bracket",
  },
]
`;

exports[`should tokenize multiline strings 1`] = `
Array [
  Object {
    "end": 6,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 2,
      },
      "start": Object {
        "column": 4,
        "line": 2,
      },
    },
    "raw": "a",
    "start": 5,
    "type": "Literal",
  },
  Object {
    "end": 8,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 2,
      },
      "start": Object {
        "column": 6,
        "line": 2,
      },
    },
    "raw": "=",
    "start": 7,
    "type": "Equal",
  },
  Object {
    "end": 12,
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 2,
      },
      "start": Object {
        "column": 8,
        "line": 2,
      },
    },
    "raw": "\\"b\\"",
    "start": 9,
    "type": "Literal",
  },
  Object {
    "end": 18,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 3,
      },
      "start": Object {
        "column": 4,
        "line": 3,
      },
    },
    "raw": "c",
    "start": 17,
    "type": "Literal",
  },
  Object {
    "end": 20,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 3,
      },
      "start": Object {
        "column": 6,
        "line": 3,
      },
    },
    "raw": "=",
    "start": 19,
    "type": "Equal",
  },
  Object {
    "end": 24,
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 3,
      },
      "start": Object {
        "column": 8,
        "line": 3,
      },
    },
    "raw": "'d'",
    "start": 21,
    "type": "Literal",
  },
  Object {
    "end": 30,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 4,
      },
      "start": Object {
        "column": 4,
        "line": 4,
      },
    },
    "raw": "e",
    "start": 29,
    "type": "Literal",
  },
  Object {
    "end": 32,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 4,
      },
      "start": Object {
        "column": 6,
        "line": 4,
      },
    },
    "raw": "=",
    "start": 31,
    "type": "Equal",
  },
  Object {
    "end": 52,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 6,
      },
      "start": Object {
        "column": 8,
        "line": 4,
      },
    },
    "raw": "\\"\\"\\"
      f
    \\"\\"\\"",
    "start": 33,
    "type": "Literal",
  },
  Object {
    "end": 58,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 7,
      },
      "start": Object {
        "column": 4,
        "line": 7,
      },
    },
    "raw": "g",
    "start": 57,
    "type": "Literal",
  },
  Object {
    "end": 60,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 7,
      },
      "start": Object {
        "column": 6,
        "line": 7,
      },
    },
    "raw": "=",
    "start": 59,
    "type": "Equal",
  },
  Object {
    "end": 80,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 9,
      },
      "start": Object {
        "column": 8,
        "line": 7,
      },
    },
    "raw": "'''
      h
    '''",
    "start": 61,
    "type": "Literal",
  },
  Object {
    "end": 88,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 10,
      },
      "start": Object {
        "column": 4,
        "line": 10,
      },
    },
    "raw": "\\"i\\"",
    "start": 85,
    "type": "Literal",
  },
  Object {
    "end": 89,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 10,
      },
      "start": Object {
        "column": 7,
        "line": 10,
      },
    },
    "raw": ".",
    "start": 88,
    "type": "Dot",
  },
  Object {
    "end": 92,
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 10,
      },
      "start": Object {
        "column": 8,
        "line": 10,
      },
    },
    "raw": "'j'",
    "start": 89,
    "type": "Literal",
  },
  Object {
    "end": 93,
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 10,
      },
      "start": Object {
        "column": 11,
        "line": 10,
      },
    },
    "raw": ".",
    "start": 92,
    "type": "Dot",
  },
  Object {
    "end": 94,
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 10,
      },
      "start": Object {
        "column": 12,
        "line": 10,
      },
    },
    "raw": "k",
    "start": 93,
    "type": "Literal",
  },
  Object {
    "end": 96,
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 10,
      },
      "start": Object {
        "column": 14,
        "line": 10,
      },
    },
    "raw": "=",
    "start": 95,
    "type": "Equal",
  },
  Object {
    "end": 100,
    "loc": Object {
      "end": Object {
        "column": 19,
        "line": 10,
      },
      "start": Object {
        "column": 16,
        "line": 10,
      },
    },
    "raw": "\\"l\\"",
    "start": 97,
    "type": "Literal",
  },
]
`;

exports[`should tokenize simple input 1`] = `
Array [
  Object {
    "end": 1,
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "raw": "a",
    "start": 0,
    "type": "Literal",
  },
  Object {
    "end": 3,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 1,
      },
      "start": Object {
        "column": 2,
        "line": 1,
      },
    },
    "raw": "=",
    "start": 2,
    "type": "Equal",
  },
  Object {
    "end": 7,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 1,
      },
      "start": Object {
        "column": 4,
        "line": 1,
      },
    },
    "raw": "\\"b\\"",
    "start": 4,
    "type": "Literal",
  },
]
`;
